--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "format-all":[
+            "./vendor/bin/php-cs-fixer fix ./ --using-cache=no"
         ]
     },
     "extra": {
